# TTS

./: .gitignore  README.md  XTTS_FINE_TUNING.md  app.py  pyproject.toml  requirements-xtts-colab.txt
colab/: XTTS_Fine_Tuning_Colab.ipynb
configs/: train.yaml  xtts_finetune.yaml
data/raw/: README.md  texto_entrenamiento.txt
desktop/TTSDesktop/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
desktop/TTSDesktop/Services/: PythonBridge.cs
scripts/: export_xtts_dataset.py  infer_xtts.py  inspect_dataset.py  package_xtts_bundle.py  preflight.py  prepare_dataset.py  run_pipeline.py  serve_api.py  synthesize.py  synthesize_best.py  train.py  train_xtts.py  validate_xtts_dataset.py
src/tts_project/: __init__.py  audio.py  checkpoint.py  config.py  dataset.py  desktop_app.py  manifest.py  model.py  raw_data.py  service.py  text.py  trainer.py  xtts.py
tests/: test_audio_pipeline.py  test_manifest.py  test_raw_data.py  test_tokenizer.py  test_xtts.py
